compiler/tests-spec/testData/psi/linked/constant-literals/boolean-literals/p-1/pos/2.17.kt
/*
 KOTLIN PSI SPEC TEST (POSITIVE)

 SECTIONS: constant-literals, boolean-literals
 PARAGRAPH: 1
 SENTENCE: [2] These are strong keywords which cannot be used as identifiers unless escaped.
 NUMBER: 17
 DESCRIPTION: The use of Boolean literals as the identifier (with backtick) in the object.
 NOTE: this test data is generated by FeatureInteractionTestDataGenerator. DO NOT MODIFY CODE MANUALLY!
 */

object A : `true` {}

object B : A<B<`false`, `true`>, `false`> {}

object `true` constructor() {}

object `false` : `true`<`false`> {}
